[package]
name = "coral-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coral MCP server: exposes the wiki + manifest as Model Context Protocol resources/tools/prompts."

[dependencies]
ahash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tiny_http = { workspace = true }
# v0.35 Q-C1: replace `std::sync::Mutex` in `server.rs` +
# `transport::http_sse` so a panic in one handler thread can't poison
# the session table / subscription set / notification ring for every
# subsequent request. Combined with SEC-01 (unauthenticated HTTP
# endpoint) the std-mutex poisoning was a pre-auth DoS vector — a
# malformed payload that tripped a handler `.unwrap()` would kill
# every request after it. parking_lot also drops the `.expect("…
# mutex")` noise that masked the actual lock site in backtraces.
parking_lot = { workspace = true }
# v0.35 SEC-07: CSPRNG-backed `Mcp-Session-Id` minting. Replaces a
# `timestamp_nanos * 0xdeadbeef + counter` mixer that was predictable
# from the server's wall-clock — an attacker who knew when a session
# initialized could enumerate adjacent ids deterministically. Now
# `rand::random::<[u8; 16]>()` is the source, formatted as a v4
# UUID-shaped string for client-side regex compatibility.
rand = { workspace = true }
coral-core = { workspace = true }
coral-stats = { workspace = true }

# rmcp v1.6 (May 2026) is the official Anthropic Rust SDK for the
# Model Context Protocol. v0.19 wave 2 will pin this dependency; v0.19
# wave 1 keeps the structural type model in place without the runtime
# dep so the workspace still builds without network.
# rmcp = "1.6"

# v0.21.1 deleted the previous `[features]` block (`default = ["stdio"]`,
# `stdio = []`, `http_sse = []`). Both transports are unconditionally
# compiled in — the runtime selection is via the `Transport` enum, not a
# build-time cargo feature. Anyone shaving binary size still has the
# option to fork `transport::http_sse` out, but the workspace surface
# stays single-flavor.

[dev-dependencies]
tempfile = { workspace = true }
regex = { workspace = true }
