[package]
name = "coral-stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coral stats: wiki health dashboard."

[dependencies]
coral-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ahash = { workspace = true }
schemars = { workspace = true }


# v0.35 Phase C — inherit workspace clippy lints (unwrap/expect/panic
# = warn). Surfaces panic-risk sites without breaking CI.
[lints]
workspace = true
