[package]
name = "coral-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Coral test layer: TestRunner trait + healthcheck/user-defined runners + JUnit output."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
coral-core = { workspace = true }
coral-env = { workspace = true }
# v0.23.3: `PropertyRunner` does Schemathesis-style property-based
# testing over OpenAPI specs. proptest gives us hand-rolled
# `BoxedStrategy<Value = serde_json::Value>` for the 5 JSON-Schema
# types and automatic shrinking on failure. Already in the dev-dep
# tree of `coral-core` and `coral-lint`; promoted to a workspace
# dep in v0.23.3 so the runtime pieces in this crate can pull it in
# without re-versioning.
proptest = { workspace = true }
rayon = { workspace = true }

[features]
default = ["healthcheck", "user_defined"]
healthcheck = []
user_defined = []
# v0.23.2: gates the *capture* path (subprocesses `keploy record`,
# resolves the target service's PID via `docker compose ps` +
# `docker inspect`, persists captured exchanges as Keploy YAML
# under `.coral/tests/recorded/<service>/`). The capture path
# requires Linux (eBPF + cgroup-v2 + the `keploy` binary on PATH);
# the `coral test record` CLI errors with a friendly hint on
# non-Linux even when the feature is enabled. **Parser + replay
# (`RecordedRunner`) are intentionally NOT gated** — they're pure
# I/O against any HTTP endpoint, so a macOS contributor can replay
# a YAML captured on Linux CI without rebuilding with the feature
# (D4 in the orchestrator's spec).
recorded = []
# v0.18+ feature gates:
# hurl = []        # second input format
# discover = []    # OpenAPI/proto auto-gen
# llm = []         # LLM-generated tests
# contract = []    # consumer-driven contracts
# property = []    # Schemathesis-style property tests

[dev-dependencies]
tempfile = { workspace = true }
